--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>My Work</h2>
+                    <h1>My Projects</h1>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -205,7 +205,7 @@
         <!-- /.container -->
     </section>
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
