--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Beautiful, Logical, Functional Design</h1>
+            <h1>Aesthetic, Functional, Intuitive Design</h1>
         </div>
     </aside>
 
@@ -182,8 +182,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                <a href="https://down2golf.herokuapp.com">
+                                    <img class="img-portfolio img-responsive" src="img/down2golf.png">
                                 </a>
                             </div>
                         </div>
@@ -196,7 +196,6 @@
                         </div>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -219,7 +218,7 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.facebook.com/"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://www.facebook.com/sheezy.deezy"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/mild7intl"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
