--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>I am your candidate to develop any website you desire!</h2>
-                    <p class="lead">I'm a WDI grad from General Assembly in San Francisco. I have a B.S. in bioengineering from UCSD. I worked in the semiconductor industry for 5 years before deciding to become a web developer.</p>
+                    <p class="lead">I'm a full stack web developer located in San Francisco. I have a B.S. in bioengineering from UCSD. I worked in the semiconductor industry for 5 years before deciding to become a web developer.</p>
                     <h5>Fun Fact: I was a sushi chef several years ago!</h5>
                 </div>
             </div>
