--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                                     <strong>MEAN Stack Web Development</strong>
                                 </h4>
                                 <p> I am well versed in MongoBB, Mongoose, Express, Angular-JS, and Node.JS</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -112,7 +111,6 @@
                                     <strong>Ruby on Rails Web Development</strong>
                                 </h4>
                                 <p>I am very comfortable working in a Ruby on Rails production environment. I have experience with many gems and PostgreSQL.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -125,7 +123,6 @@
                                     <strong>Python Django Web Development</strong>
                                 </h4>
                                 <p>I understand the Python Django framework for web app deployment and am excited to work within this environemnt.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -138,7 +135,6 @@
                                     <strong>Custom API Develpment</strong>
                                 </h4>
                                 <p>I have created many RESTful API's for several applications. Let me know what you need and I'll construct it for you.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -166,31 +162,24 @@
                     <h1>My Projects</h1>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="https://quacker1.herokuapp.com">
                                     <img class="img-portfolio img-responsive" src="img/quacker.png">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="https://banana-taco.herokuapp.com">
                                     <img class="img-portfolio img-responsive" src="img/vagabond.png">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="https://down2golf.herokuapp.com">
                                     <img class="img-portfolio img-responsive" src="img/down2golf.png">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
@@ -225,6 +214,9 @@
                         </li>
                         <li>
                             <a href="https://www.github.com/scoobaroo"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/scoobaroo415"><i class ="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
