--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
             </li>
+            <li>
+                <a href="/payment">Payment </a>
+            </li>
         </ul>
     </nav>
 
