--- a/payment.html
+++ b/payment.html
@@ -16,6 +16,20 @@
   </div>
 </form>
 <br>
+<form action="http://saas.shopsite.com/sc/order.cgi" method="post">
+<select name="6:finopt:0" size="1">
+<option value="Tinted">Website $7500</option>
+<option value="Tinted">Website $6500</option>
+<option value="Slate Blue">Website $5000</option>
+<option value="Black">Website $1500</option>
+</select>
+<input type="hidden" name="6:finoptnum" value="1">
+<br><input type=hidden name="storeid" value="*2eca6cef78b8f383fa442f9b20520f0966f13b49b7bd872498">
+<input type=hidden name="dbname" value="products">
+<input type=hidden name="function" value="add">
+<input type=hidden name="guid" value="f7cf2f00-4f04-11e6-b6dd-04012fe20a01">
+<input type=image src="https://saas.shopsite.com/shopsite-images/en-US/buttons/oa/blue-add-to-cart.png" border="0" align="bottom" alt="Add to Cart" name="Add to Cart">
+</form>
 
 <script src="https://js.braintreegateway.com/js/braintree-2.24.1.min.js"></script>
 <script>
